--- a/ScienceMuseum/scss/_small.scss
+++ b/ScienceMuseum/scss/_small.scss
@@ -6,39 +6,44 @@ html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
 
 /* body rules */
 body {
-    font-family: Verdana;
+    font-family: $fontFamily;
     font-size: 16px;
 }
 
 header {
     background-color: $primaryColor;
-    padding: 1rem 2%;
-}
-header h1 {
-	margin: 0; 
-	font-size: 1.5rem;
-}
-header h2{
-	margin: 0; 
-	font-size: 1.2rem; 
-	font-weight: normal;
-}
+    padding: 1rem $gutter;
+    h1 {
+        margin: 0; 
+        font-size: 1.5rem;
+        font-weight: $heavyWeight;
+    }// end of h1
+    h2{
+        margin: 0; 
+        font-size: 1.2rem; 
+        font-weight: $regularWeight;
+        
+    }//end of h2
 
-nav {background-color: #111;}
-nav ul{margin:0; padding: 0;}
-nav li {list-style-type: none;}
-nav li.active {background-color: #333}
-nav a {
+} //end of header
+
+nav {background-color: #111;
+ ul{margin:0; padding: 0;}
+ li {list-style-type: none;}
+ li.active {background-color: #333}
+ a {
     display: block;
     padding: .8rem 0; /*44px min*/
     color: #eee;
     text-align: center;
     text-decoration: none;
+}//end of a 
+ a:hover {background-color: #444;}
+}//end nav
+main{display: block; padding: 1rem $gutter;}
+main h1 {color: $primaryColor;
+    font-weight: $heavyWeight;
 }
-nav a:hover {background-color: #444;}
-
-main{display: block; padding: 1rem 2%;}
-main h1 {color: #17a8e4;}
 
 main figure img {width: 100%;}
 main figure{
@@ -49,7 +54,7 @@ main figure{
 main figcaption {text-align: center; font-size: .8rem;}
 main figure.myphoto {
     width: 50%;
-    margin: 0 0 0 2%;
+    margin: 0 0 0 $gutter;
 }
 main figure.myphoto img {
     width: 100%;
@@ -58,9 +63,9 @@ main figure.myphoto figcaption { text-align: center; font-size:.75rem;}
 
 
 footer {
-    background-color: #17a8e4;
+    background-color: $primaryColor;
     text-align: center;
-    padding: 1rem 2%;
+    padding: 1rem $gutter;
 }
 
 
