--- a/ScienceMuseum/scss/_small.scss
+++ b/ScienceMuseum/scss/_small.scss
@@ -1,73 +1,96 @@
 /* Prevent adjustments of font size after orientation changes in IE on Windows Phone and in iOS.  */
-html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
+html {
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+}
 
 /*----------- apply a natural box layout model to all elements --------------*/
-* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
+* {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
 
 /* body rules */
 body {
-    font-family: $fontFamily;
-    font-size: 16px;
+  font-family: $fontFamily;
+  font-size: 16px;
 }
 
 header {
-    background-color: $primaryColor;
-    padding: 1rem $gutter;
-    h1 {
-        margin: 0; 
-        font-size: 1.5rem;
-        font-weight: $heavyWeight;
-    }// end of h1
-    h2{
-        margin: 0; 
-        font-size: 1.2rem; 
-        font-weight: $regularWeight;
-        
-    }//end of h2
-
+  background-color: $primaryColor;
+  padding: 1rem $gutter;
+  h1 {
+    margin: 0;
+    font-size: 1.5rem;
+    font-weight: $heavyWeight;
+  } // end of h1
+  h2 {
+    margin: 0;
+    font-size: 1.2rem;
+    font-weight: $regularWeight;
+  } //end of h2
 } //end of header
 
-nav {background-color: #111;
- ul{margin:0; padding: 0;}
- li {list-style-type: none;}
- li.active {background-color: #333}
- a {
+nav {
+  background-color: #111;
+  ul {
+    margin: 0;
+    padding: 0;
+  }
+  li {
+    list-style-type: none;
+  }
+  li.active {
+    background-color: #333;
+  }
+  a {
     display: block;
-    padding: .8rem 0; /*44px min*/
+    padding: 0.8rem 0; /*44px min*/
     color: #eee;
     text-align: center;
     text-decoration: none;
-}//end of a 
- a:hover {background-color: #444;}
-}//end nav
-main{display: block; padding: 1rem $gutter;}
-main h1 {color: $primaryColor;
+  } //end of a
+  a:hover {
+    background-color: #444;
+  }
+} //end nav
+main {
+  display: block;
+  padding: 1rem $gutter;
+  h1 {
+    color: $primaryColor;
     font-weight: $heavyWeight;
-}
+  }
 
-main figure img {width: 100%;}
-main figure{
+  figure img {
+    width: 100%;
+  }
+  figure {
     margin: 0;
     width: 100%;
-    
-}
-main figcaption {text-align: center; font-size: .8rem;}
-main figure.myphoto {
+  }
+  figcaption {
+    text-align: center;
+    font-size: 0.8rem;
+  }
+  figure.myphoto {
     width: 50%;
     margin: 0 0 0 $gutter;
-}
-main figure.myphoto img {
+  }
+  figure.myphoto img {
     width: 100%;
-}
-main figure.myphoto figcaption { text-align: center; font-size:.75rem;}
-
-
-footer {
-    background-color: $primaryColor;
+  }
+  figure.myphoto figcaption {
     text-align: center;
-    padding: 1rem $gutter;
+    font-size: 0.75rem;
+  }
+} //end main
+footer {
+  background-color: $primaryColor;
+  text-align: center;
+  padding: 1rem $gutter;
 }
-
 
 /*----- Clearfix: Force an Element not to collapse -----*/
 .clearfix:after {
