--- a/ScienceMuseum/scss/_small.scss
+++ b/ScienceMuseum/scss/_small.scss
@@ -63,13 +63,13 @@ main {
     font-weight: $heavyWeight;
   }
 
-  figure img {
-    width: 100%;
-  }
+  
   figure {
     margin: 0;
     width: 100%;
-  }
+    img {
+        width: 100%;}
+  }//ends figure
   figcaption {
     text-align: center;
     font-size: 0.8rem;
