--- a/navigation/scss/_medium.scss
+++ b/navigation/scss/_medium.scss
@@ -2,5 +2,9 @@
 nav {
     ul {
         display: flex;
+        justify-content: space-between;
     }//end ul
+    ul li a {
+        border: none;
+    } // end ul li a
 }//end nav
