--- a/ScienceMuseum/css/styles.css
+++ b/ScienceMuseum/css/styles.css
@@ -533,6 +533,22 @@ main figure.myphoto figcaption {
   font-size: 0.75rem;
 }
 
+/* blurring the image */
+.gfg {
+  filter: blur(5px);
+  width: 100%;
+}
+
+/* designing title and tag line */
+.logo {
+  text-align: center;
+  position: absolute;
+  font-size: 18px;
+  top: 50px;
+  left: 27%;
+  color: white;
+}
+
 div#footerWrapper {
   background-color: #e4c517;
 }
