--- a/navigation/scss/_small.scss
+++ b/navigation/scss/_small.scss
@@ -41,6 +41,7 @@ nav {
     display: block;
     padding: 0.9rem 2vw;
     border-top: solid 1px rgba(0, 0, 0, 0.2);
+    text-align: center;
   } // end of ul li a
   ul li a:hover {
     background-color: #eee;
