--- a/navigation/scss/styles.scss
+++ b/navigation/scss/styles.scss
@@ -9,7 +9,7 @@
 	@import "medium";
 }
 
-//64em is also 1028px (if basefont is 16px)
+//64rem is also 1028px (if basefont is 16px)
 @media only screen and (min-width: 64rem) {
 	@import "large";
 } 
