--- a/ScienceMuseum/scss/_large.scss
+++ b/ScienceMuseum/scss/_large.scss
@@ -6,7 +6,10 @@
     
     
     
-    nav ul {padding-left: $gutter;}
+    nav ul {padding-left: $gutter;
+            display: flex;
+            justify-content: center;
+        }
     nav li {width:auto;}
     nav a {padding: .5rem 1rem;}
     
