--- a/navigation/scss/_small.scss
+++ b/navigation/scss/_small.scss
@@ -29,7 +29,7 @@ header {
     font-size: 1.6rem;
     font-weight: $lightWeight;
     padding-left: 0.5rem;
-    color: $primaryColor;
+    color: $secondaryColor;
   }
 } // end header
 
