--- a/ScienceMuseum/scss/_medium.scss
+++ b/ScienceMuseum/scss/_medium.scss
@@ -1,6 +1,9 @@
 
     nav li {width: 25%; float: left;}
-    
+    nav ul {
+        display: flex;
+        justify-content: space-between;
+    }
     
     main figure {
         float: right; 
@@ -8,6 +11,18 @@
         margin-left: 2%;
         padding-bottom: .5rem;
     }
+    
+  figure.mypic {
+    width: 50%;
+    margin: 0 0 0 $gutter;
+  }
+  figure.mypic img {
+    width: 50%;
+  }
+  figure.mypic figcaption {
+    text-align: center;
+    font-size: 0.75rem;
+  }
     
     div.news {
         clear: both;
