--- a/ScienceMuseum/scss/_small.scss
+++ b/ScienceMuseum/scss/_small.scss
@@ -31,6 +31,21 @@ header {
   } //end of h2
 } //end of header
 
+.header img {
+  float: left;
+  width: 100px;
+  height: 25px;
+  background: #555;
+}
+
+.header h1 {
+  position: relative;
+  top: 18px;
+  left: 10px;
+}
+
+
+
 div#navWrapper {background-color: #111;}
 nav {
   
@@ -48,7 +63,7 @@ nav {
     display: block;
     padding: 0.8rem 0; /*44px min*/
     color: #eee;
-    text-align: center;
+    text-align: left;
     text-decoration: none;
   } //end of a
   a:hover {
@@ -62,7 +77,7 @@ main {
   display: block;
   padding: 1rem $gutter;
   h1 {
-    color: $primaryColor;
+    color: $secondaryColor;
     font-weight: $heavyWeight;
     margin:0; padding-top: 5rem;
   }
@@ -79,7 +94,7 @@ main {
     font-size: 0.8rem;
   }
   figure.myphoto {
-    width: 50%;
+    width: 100%;
     margin: 0 0 0 $gutter;
   }
   figure.myphoto img {
@@ -89,23 +104,19 @@ main {
     text-align: center;
     font-size: 0.75rem;
   }
-} //end main
 
-/* blurring the image */
-.gfg {
-  filter: blur(5px);
-  width: 100%;
-}
-   
-/* designing title and tag line */
-.logo {
-  text-align:center;
-  position: absolute;
-  font-size: 18px;
-  top: 50px;
-  left: 27%;
-  color: white;
-}
+  figure.mypic {
+    width: 33%;
+    margin: 0 0 0 $gutter;
+  }
+  figure.mypic img {
+    width: 100%;
+  }
+  figure.mypic figcaption {
+    text-align: center;
+    font-size: 0.75rem;
+  }
+} //end main
 
 
 div#footerWrapper { background-color: $primaryColor;}
