--- a/ScienceMuseum/scss/_small.scss
+++ b/ScienceMuseum/scss/_small.scss
@@ -29,6 +29,13 @@ header {
     font-size: 1.2rem;
     font-weight: $regularWeight;
   } //end of h2
+  figure.logo {
+    width: 100px;
+    margin: 0 0 0 $gutter;
+  }
+  figure.logo img {
+    width: 100px;
+  }
 } //end of header
 
 .header img {
