--- a/startFile/scss/_small.scss
+++ b/startFile/scss/_small.scss
@@ -59,14 +59,14 @@ main {
     min-height: 10rem;
 }
 
-section.theGallery figure {
+section.thegallery figure {
     width: 100%;
     height: 0;
-    padding-bottom: 150%;
+    padding-bottom: 60%; /* You define this doing image height / weight * 100% */
     position: relative;
     margin: 0;
 }
-section.theGallery figure img {
+section.thegallery figure img {
     width:100%;
     height: auto;
     position: absolute;
