--- a/08 News/scss/styles.css
+++ b/08 News/scss/styles.css
@@ -178,9 +178,16 @@ main h1 {
   font-weight: 300; }
 main .parent {
   display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-columns: 25% 50% 25%;
   grid-template-rows: auto; }
   main .parent p:nth-child(1) {
+    grid-column: 1 / span 2; }
+
+.parent {
+  display: grid;
+  grid-template-columns: 25% 50% 25%;
+  grid-template-rows: auto; }
+  .parent p:nth-child(1) {
     grid-column: 1 / span 2; }
 
 /* FOOTER  */
