--- a/03-Fruit-Stand/scss/_small.scss
+++ b/03-Fruit-Stand/scss/_small.scss
@@ -53,7 +53,7 @@ header {
 
 
 
-div#navWrapper {background-color: #111;}
+div#navWrapper {background-color: rgb(231, 127, 7);}
 nav {
   
   ul {
@@ -64,18 +64,19 @@ nav {
     list-style-type: none;
   }
   li.active {
-    background-color: #333;
+    background-color: rgb(252, 165, 4);
   }
   a {
     display: block;
     padding: .8rem 0; /*44px min*/
     color: #eee;
-    text-align: left;
+    text-align: right;
     text-decoration: none;
     margin-left: .8rem;
   } //end of a
   a:hover {
     background-color: #444;
+    text-decoration: underline;
   }
 } //end nav
 
@@ -89,20 +90,6 @@ main {
     font-weight: $heavyWeight;
     margin:0; padding-top: 5rem;
   }
-  div.parent{
-    display: flex;
-    flex-wrap: wrap;
-  }
-  div.parent figure{
-    flex-basis: 50%;
-    margin:0;
-  }
-  div.parent figure img{
-    width:100%;
-    height:auto;
-  }
-
-  //ends figure
   figcaption {
     text-align: center;
     font-size: 0.8rem;
@@ -111,10 +98,20 @@ main {
     text-align: center;
     font-size: 0.75rem;
   }
-
-  
 } //end main
 
+div.parent{
+  display: flex;
+  flex-wrap: wrap;
+}
+div.parent figure{
+  flex-basis: 46%;
+  margin:0;
+}
+div.parent figure img{
+  width:100%;
+  height:auto;
+}//end gallery
 
 div#footerWrapper { background-color: $primaryColor;}
 footer {
