--- a/ScienceMuseum/scss/styles.css
+++ b/ScienceMuseum/scss/styles.css
@@ -1,13 +1,16 @@
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+/* normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
 /**
  * 1. Correct the line height in all browsers.
- * 2. Prevent adjustments of font size after orientation changes in iOS.
+ * 2. Prevent adjustments of font size after orientation changes in
+ *    IE on Windows Phone and in iOS.
  */
 html {
   line-height: 1.15;
   /* 1 */
+  -ms-text-size-adjust: 100%;
+  /* 2 */
   -webkit-text-size-adjust: 100%;
   /* 2 */
 }
@@ -15,16 +18,21 @@ html {
 /* Sections
    ========================================================================== */
 /**
- * Remove the margin in all browsers.
+ * Remove the margin in all browsers (opinionated).
  */
 body {
   margin: 0;
 }
 
 /**
- * Render the `main` element consistently in IE.
+ * Add the correct display in IE 9-.
  */
-main {
+article,
+aside,
+footer,
+header,
+nav,
+section {
   display: block;
 }
 
@@ -39,6 +47,24 @@ h1 {
 
 /* Grouping content
    ========================================================================== */
+/**
+ * Add the correct display in IE 9-.
+ * 1. Add the correct display in IE.
+ */
+figcaption,
+figure,
+main {
+  /* 1 */
+  display: block;
+}
+
+/**
+ * Add the correct margin in IE 8.
+ */
+figure {
+  margin: 1em 40px;
+}
+
 /**
  * 1. Add the correct box sizing in Firefox.
  * 2. Show the overflow in Edge and IE.
@@ -67,14 +93,18 @@ pre {
 /* Text-level semantics
    ========================================================================== */
 /**
- * Remove the gray background on active links in IE 10.
+ * 1. Remove the gray background on active links in IE 10.
+ * 2. Remove gaps in links underline in iOS 8+ and Safari 8+.
  */
 a {
   background-color: transparent;
+  /* 1 */
+  -webkit-text-decoration-skip: objects;
+  /* 2 */
 }
 
 /**
- * 1. Remove the bottom border in Chrome 57-
+ * 1. Remove the bottom border in Chrome 57- and Firefox 39-.
  * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
  */
 abbr[title] {
@@ -85,6 +115,14 @@ abbr[title] {
   -webkit-text-decoration: underline dotted;
           text-decoration: underline dotted;
   /* 2 */
+}
+
+/**
+ * Prevent the duplicate application of `bolder` by the next rule in Safari 6.
+ */
+b,
+strong {
+  font-weight: inherit;
 }
 
 /**
@@ -106,6 +144,21 @@ samp {
   /* 1 */
   font-size: 1em;
   /* 2 */
+}
+
+/**
+ * Add the correct font style in Android 4.3-.
+ */
+dfn {
+  font-style: italic;
+}
+
+/**
+ * Add the correct background and color in IE 9-.
+ */
+mark {
+  background-color: #ff0;
+  color: #000;
 }
 
 /**
@@ -138,16 +191,39 @@ sup {
 /* Embedded content
    ========================================================================== */
 /**
- * Remove the border on images inside links in IE 10.
+ * Add the correct display in IE 9-.
+ */
+audio,
+video {
+  display: inline-block;
+}
+
+/**
+ * Add the correct display in iOS 4-7.
+ */
+audio:not([controls]) {
+  display: none;
+  height: 0;
+}
+
+/**
+ * Remove the border on images inside links in IE 10-.
  */
 img {
   border-style: none;
 }
 
+/**
+ * Hide the overflow in IE.
+ */
+svg:not(:root) {
+  overflow: hidden;
+}
+
 /* Forms
    ========================================================================== */
 /**
- * 1. Change the font styles in all browsers.
+ * 1. Change the font styles in all browsers (opinionated).
  * 2. Remove the margin in Firefox and Safari.
  */
 button,
@@ -155,7 +231,7 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: inherit;
+  font-family: sans-serif;
   /* 1 */
   font-size: 100%;
   /* 1 */
@@ -186,13 +262,16 @@ select {
 }
 
 /**
- * Correct the inability to style clickable types in iOS and Safari.
+ * 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
+ *    controls in Android 4.
+ * 2. Correct the inability to style clickable types in iOS and Safari.
  */
 button,
-[type="button"],
+html [type="button"],
 [type="reset"],
 [type="submit"] {
   -webkit-appearance: button;
+  /* 2 */
 }
 
 /**
@@ -246,22 +325,26 @@ legend {
 }
 
 /**
- * Add the correct vertical alignment in Chrome, Firefox, and Opera.
+ * 1. Add the correct display in IE 9-.
+ * 2. Add the correct vertical alignment in Chrome, Firefox, and Opera.
  */
 progress {
+  display: inline-block;
+  /* 1 */
   vertical-align: baseline;
+  /* 2 */
 }
 
 /**
- * Remove the default vertical scrollbar in IE 10+.
+ * Remove the default vertical scrollbar in IE.
  */
 textarea {
   overflow: auto;
 }
 
 /**
- * 1. Add the correct box sizing in IE 10.
- * 2. Remove the padding in IE 10.
+ * 1. Add the correct box sizing in IE 10-.
+ * 2. Remove the padding in IE 10-.
  */
 [type="checkbox"],
 [type="radio"] {
@@ -292,8 +375,9 @@ textarea {
 }
 
 /**
- * Remove the inner padding in Chrome and Safari on macOS.
+ * Remove the inner padding and cancel buttons in Chrome and Safari on macOS.
  */
+[type="search"]::-webkit-search-cancel-button,
 [type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
@@ -312,9 +396,11 @@ textarea {
 /* Interactive
    ========================================================================== */
 /*
- * Add the correct display in Edge, IE 10+, and Firefox.
+ * Add the correct display in IE 9-.
+ * 1. Add the correct display in Edge, IE, and Firefox.
  */
-details {
+details,
+menu {
   display: block;
 }
 
@@ -325,17 +411,26 @@ summary {
   display: list-item;
 }
 
-/* Misc
+/* Scripting
    ========================================================================== */
 /**
- * Add the correct display in IE 10+.
+ * Add the correct display in IE 9-.
+ */
+canvas {
+  display: inline-block;
+}
+
+/**
+ * Add the correct display in IE.
  */
 template {
   display: none;
 }
 
+/* Hidden
+   ========================================================================== */
 /**
- * Add the correct display in IE 10.
+ * Add the correct display in IE 10-.
  */
 [hidden] {
   display: none;
@@ -353,94 +448,151 @@ html {
   box-sizing: border-box;
 }
 
-/*----------- BODY --------------*/
+/* body rules */
 body {
+  font-family: "Quicksand", sans-serif;
   font-size: 16px;
-  font-family: Verdana, sans-serif;
 }
 
-/*----------- HEADER --------------*/
+div#headerWrapper {
+  background-color: #faf9f6;
+}
+
 header {
-  padding: .5rem 2%;
-  background-color: #ddd;
+  padding: 1rem 2%;
 }
 
 header h1 {
   margin: 0;
+  font-size: 1.5rem;
+  font-weight: 700;
 }
 
 header h2 {
   margin: 0;
-  font-weight: normal;
+  font-size: 1.2rem;
+  font-weight: 300;
 }
 
-/*----------- NAVIGATION --------------*/
-nav {
-  background-color: #666;
+header figure.logo {
+  width: 100px;
+  margin: 0 0 0 2%;
+}
+
+header figure.logo img {
+  width: 100px;
+}
+
+.header img {
+  float: left;
+  width: 100px;
+  height: 25px;
+  background: #555;
+}
+
+.header h1 {
+  position: relative;
+  top: 18px;
+  left: 10px;
+}
+
+div#navWrapper {
+  background-color: #111;
 }
 
 nav ul {
-  list-style-type: none;
+  margin: 0;
   padding: 0;
-  margin: 0;
 }
 
-nav ul li {
-  float: left;
-  width: 25%;
+nav li {
+  list-style-type: none;
 }
 
-nav ul li a {
+nav li.active {
+  background-color: #333;
+}
+
+nav a {
   display: block;
-  background-color: #444;
+  padding: .8rem 0;
+  /*44px min*/
   color: #eee;
-  border-left: 1px solid #777;
-  padding: .5rem 0;
+  text-align: left;
   text-decoration: none;
-  font-size: .9rem;
-  text-align: center;
+  margin-left: .8rem;
 }
 
-nav ul li:first-child a {
-  border-left: none;
+nav a:hover {
+  background-color: #444;
 }
 
-nav ul li a:hover {
-  background-color: #eee;
-  color: #333;
+div#mainWrapper {
+  background-color: red;
 }
 
-nav ul li.active a {
-  background-color: #000;
-  color: #fff;
-}
-
-/*----------- MAIN --------------*/
 main {
-  padding: 0 2%;
-  min-height: 10rem;
+  background-color: white;
+  display: block;
+  padding: 1rem 2%;
 }
 
-section.thegallery figure {
-  width: 100%;
-  height: 0;
-  padding-bottom: 60%;
-  /* You define this doing image height / weight * 100% */
-  position: relative;
+main h1 {
+  color: blue;
+  font-weight: 700;
   margin: 0;
+  padding-top: 5rem;
 }
 
-section.thegallery figure img {
+main figure {
+  margin: 0;
   width: 100%;
-  height: auto;
-  position: absolute;
 }
 
-/*----------- FOOTER --------------*/
-footer {
-  background-color: #ddd;
-  padding: .5rem 2%;
+main figure img {
+  width: 100%;
+}
+
+main figcaption {
   text-align: center;
+  font-size: 0.8rem;
+}
+
+main figure.myphoto {
+  width: 100%;
+  margin: 0 0 0 2%;
+}
+
+main figure.myphoto img {
+  width: 100%;
+}
+
+main figure.myphoto figcaption {
+  text-align: center;
+  font-size: 0.75rem;
+}
+
+main figure.mypic {
+  width: 33%;
+  margin: 0 0 0 2%;
+}
+
+main figure.mypic img {
+  width: 100%;
+}
+
+main figure.mypic figcaption {
+  text-align: center;
+  font-size: 0.75rem;
+}
+
+div#footerWrapper {
+  background-color: #faf9f6;
+}
+
+footer {
+  text-align: center;
+  padding: 1rem 2%;
 }
 
 /*----- Clearfix: Force an Element not to collapse -----*/
@@ -450,40 +602,73 @@ footer {
   clear: both;
 }
 
-@media only screen and (min-width: 35rem) {
-  /*----------- BODY --------------*/
-  /*----------- HEADER --------------*/
-  /*----------- NAVIGATION --------------*/
+@media only screen and (min-width: 560px) {
+  nav li {
+    width: 25%;
+    float: left;
+  }
   nav ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  main figure {
+    float: right;
+    width: 48%;
     margin-left: 2%;
+    padding-bottom: .5rem;
   }
-  nav ul li {
-    width: auto;
+  figure.mypic {
+    width: 50%;
+    margin: 0 0 0 2%;
   }
-  nav ul li:first-child a {
-    border-left: 1px solid #777;
+  figure.mypic img {
+    width: 50%;
   }
-  nav ul li:last-child a {
-    border-right: 1px solid #777;
+  figure.mypic figcaption {
+    text-align: center;
+    font-size: 0.75rem;
   }
-  nav ul li a {
-    padding: .5rem 1rem;
+  div.news {
+    clear: both;
+    -webkit-column-count: 2;
+            column-count: 2;
+    -webkit-column-rule: 1px solid #ddd;
+            column-rule: 1px solid #ddd;
   }
-  /*----------- MAIN --------------*/
-  /*----------- FOOTER --------------*/
 }
 
 /* end of media query */
-@media only screen and (min-width: 64rem) {
+@media only screen and (min-width: 1028px) {
   header, nav, main, footer {
-    max-width: 64rem;
+    max-width: 1200px;
     margin: auto;
   }
-  /*----------- BODY --------------*/
-  /*----------- HEADER --------------*/
-  /*----------- NAVIGATION --------------*/
-  /*----------- MAIN --------------*/
-  /*----------- FOOTER --------------*/
+  nav ul {
+    padding-left: 2%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  nav li {
+    width: auto;
+  }
+  nav a {
+    padding: .5rem 1rem;
+  }
+  main figure {
+    width: 31%;
+  }
+  div.news {
+    -webkit-column-count: 3;
+            column-count: 3;
+  }
 }
 
 /* end of media query */
