--- a/Unit06_Band/startfile/scss/styles.css
+++ b/Unit06_Band/startfile/scss/styles.css
@@ -23,56 +23,68 @@ time, mark, audio, video {
   outline: 0;
   font-size: 100%;
   vertical-align: baseline;
-  background: transparent; }
+  background: transparent;
+}
 
 body {
-  line-height: 1; }
+  line-height: 1;
+}
 
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
-  display: block; }
+  display: block;
+}
 
 nav ul {
-  list-style: none; }
+  list-style: none;
+}
 
 blockquote, q {
-  quotes: none; }
+  quotes: none;
+}
 
 blockquote:before, blockquote:after,
 q:before, q:after {
   content: '';
-  content: none; }
+  content: none;
+}
 
 a {
   margin: 0;
   padding: 0;
   font-size: 100%;
   vertical-align: baseline;
-  background: transparent; }
+  background: transparent;
+}
 
 /* change colours to suit your needs */
 ins {
   background-color: #ff9;
   color: #000;
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 /* change colours to suit your needs */
 mark {
   background-color: #ff9;
   color: #000;
   font-style: italic;
-  font-weight: bold; }
+  font-weight: bold;
+}
 
 del {
-  text-decoration: line-through; }
+  text-decoration: line-through;
+}
 
 abbr[title], dfn[title] {
   border-bottom: 1px dotted;
-  cursor: help; }
+  cursor: help;
+}
 
 table {
   border-collapse: collapse;
-  border-spacing: 0; }
+  border-spacing: 0;
+}
 
 /* change border colour to suit your needs */
 hr {
@@ -81,42 +93,74 @@ hr {
   border: 0;
   border-top: 1px solid #cccccc;
   margin: 1em 0;
-  padding: 0; }
+  padding: 0;
+}
 
 input, select {
-  vertical-align: middle; }
+  vertical-align: middle;
+}
 
 /* Prevent adjustments of font size after orientation changes in IE on Windows Phone and in iOS.  */
 html {
   -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%; }
+  -ms-text-size-adjust: 100%;
+}
 
 /*  apply a natural box layout model to all elements  */
 * {
-  -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 /* BODY  */
 body {
-  font-family: "Spline Sans", sans-serif;
+  font-family: "Be Vietnam Pro", sans-serif;
   font-size: 16px;
   font-weight: 300;
-  min-width: 320px; }
+  min-width: 320px;
+}
 
 /* HEADER  */
 header {
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: 51px auto;
-  align-items: center;
-  padding: .5rem 2vw; }
-  header h1 {
-    font-size: 1.6rem;
-    font-weight: 300;
-    padding-left: .5rem;
-    color: #cc7a26; }
+  -ms-grid-columns: 51px auto;
+      grid-template-columns: 51px auto;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: .5rem 2vw;
+  font-family: "Be Vietnam Pro", sans-serif;
+  background-color: #e2cccc;
+}
+
+header h1 {
+  font-size: 4rem;
+  font-weight: 500;
+  padding-left: 0.5rem;
+  color: rgba(182, 159, 31, 0.952);
+  text-align: center;
+}
+
+header h2 {
+  font-size: 2rem;
+  font-weight: 500;
+  padding-left: 1rem;
+  color: #b4340d;
+  font-style: italic;
+}
 
 /* NAVIGATION STUFF GOES HERE  */
+nav {
+  -webkit-box-align: right;
+      -ms-flex-align: right;
+          align-items: right;
+  padding: .5rem;
+  position: absolute;
+  top: 100px;
+  right: 350px;
+}
+
 nav button {
   position: absolute;
   top: 0;
@@ -124,96 +168,217 @@ nav button {
   background: transparent;
   border: none;
   font-size: 1.5rem;
-  color: #333;
-  padding: .5rem 2vw .5rem 1rem; }
+  color: #111002;
+  padding: 0.5rem 2vw 0.5rem 1rem;
+}
+
 nav ul li {
-  border-bottom: 1px solid rgba(255, 255, 255, 0.9); }
+  border-bottom: 1px solid rgba(255, 255, 255, 0.9);
+}
+
 nav ul {
   background-color: #265b7d;
   position: absolute;
-  right: 0;
   width: 100%;
-  display: none; }
+  display: none;
+  z-index: 9;
+}
+
 nav ul.open {
-  display: block; }
+  display: block;
+}
+
 nav ul li a {
   display: block;
-  padding: .9rem 2vw;
+  padding: 0.9rem 2vw;
   font-weight: 300;
   color: rgba(255, 255, 255, 0.9);
   text-decoration: none;
-  text-align: right; }
+  text-align: right;
+}
+
 nav ul li.active a {
-  background-color: #1c445e; }
+  background-color: #1c445e;
+}
+
 nav ul li a:hover {
-  background-color: #21506d; }
+  background-color: #21506d;
+}
 
 /* MAIN  */
+main {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+main section.members {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-top: 10%;
+}
+
+main section.members .circle {
+  margin-left: 20px;
+}
+
+main section.members .circle img {
+  float: left;
+  shape-outside: circle(50%);
+  margin-bottom: 10px;
+  margin-left: 10px;
+  -webkit-clip-path: circle(60%);
+          clip-path: circle(60%);
+}
+
+main section.members .round {
+  margin-left: 20px;
+}
+
+main section.members .round img {
+  float: left;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  -webkit-clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
+          clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
+  shape-outside: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
+}
+
+main section.members .ellipse {
+  margin-left: 20px;
+}
+
+main section.members .ellipse img {
+  float: left;
+  shape-outside: ellipse(150px 300px at 50% 50%);
+  margin-bottom: 10px;
+  margin-left: 10px;
+  -webkit-clip-path: circle(150px at 160px 150px);
+          clip-path: circle(150px at 160px 150px);
+}
+
+main section.members .polygon {
+  margin-left: 20px;
+}
+
+main section.members .polygon img {
+  float: left;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  -webkit-clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+          clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+  shape-outside: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+}
+
 main p {
-  padding: .5rem 2vw;
+  padding: 0.5rem 2vw;
   color: #333;
-  line-height: 125%; }
+  line-height: 125%;
+}
+
 main h1 {
-  padding: 1rem 2vw .5rem 2vw;
+  padding: 1rem 2vw 0.5rem 2vw;
   font-size: 1.5rem;
-  color: #265b7d;
-  font-weight: 300; }
+  color: #b4340d;
+  font-weight: 300;
+}
+
+main section.thegallery figure {
+  width: 100%;
+  height: 0;
+  padding-bottom: 60%;
+  /* You define this doing image height / weight * 100% */
+  position: relative;
+  margin: 0;
+}
+
+main section.thegallery figure img {
+  width: 100%;
+  height: 650px;
+  position: absolute;
+}
+
 main .hero {
-  width: 100%; }
+  width: 100%;
+}
+
 main .hero img {
   width: 100%;
-  height: auto; }
-
-#clipped {
-  margin-bottom: 20px;
-  clip-path: circle(100% at 100% 0); }
+  height: auto;
+  -webkit-clip-path: none;
+          clip-path: none;
+}
 
 /* FOOTER  */
 #footerWrapper {
-  background-color: #1b1b1b; }
+  background-color: #1b1b1b;
+}
 
 footer {
-  font-size: .85rem;
+  font-size: 0.85rem;
   padding: 1rem 0;
   color: #bbb;
-  text-align: center; }
-  footer a {
-    color: #eee; }
+  text-align: center;
+}
+
+footer a {
+  color: #eee;
+}
 
 @media only screen and (min-width: 35rem) {
   /* NAVIGATION STUFF GOES HERE  */
   nav ul {
-    width: 200px; } }
+    width: 250px;
+  }
+}
+
 @media only screen and (min-width: 64rem) {
-  header, main {
+  header, nav, main {
     max-width: 1240px;
-    margin: auto; }
-
+    margin: auto;
+  }
   header {
-    grid-template-columns: 51px auto auto; }
-
+    -ms-grid-columns: 51px auto auto;
+        grid-template-columns: 51px auto auto;
+  }
   /* NAVIGATION STUFF GOES HERE  */
   nav {
-    justify-self: end; }
-    nav button {
-      display: none; }
-    nav ul, nav ul.open {
-      position: relative;
-      display: flex;
-      background-color: transparent;
-      width: auto; }
-    nav ul li {
-      border: none; }
-    nav ul li a {
-      color: #333;
-      border-radius: 20px;
-      padding: .5rem 1rem;
-      margin-left: .2rem;
-      transition: all .5s ease; }
-    nav ul li a:hover {
-      background-color: #eee;
-      color: #333 !important; }
-    nav ul li.active a {
-      color: white; } }
-
+    -ms-grid-column-align: end;
+        justify-self: end;
+  }
+  nav button {
+    display: none;
+  }
+  nav ul, nav ul.open {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    background-color: transparent;
+    width: auto;
+  }
+  nav ul li {
+    border: none;
+  }
+  nav ul li a {
+    color: #333;
+    border-radius: 20px;
+    padding: .5rem 1rem;
+    margin-left: .2rem;
+    -webkit-transition: all .5s ease;
+    transition: all .5s ease;
+  }
+  nav ul li a:hover {
+    background-color: #eee;
+    color: #333 !important;
+  }
+  nav ul li.active a {
+    color: white;
+  }
+}
 /*# sourceMappingURL=styles.css.map */
