--- a/navigation/scss/styles.css
+++ b/navigation/scss/styles.css
@@ -129,135 +129,55 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: .5rem 2vw;
+  padding: 0.5rem 2vw;
 }
 
 header h1 {
   font-size: 1.6rem;
   font-weight: 300;
-  padding-left: 1rem;
-  color: #2660cc;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  padding-left: 0.5rem;
+  color: #265b7d;
 }
 
 /* NAVIGATION STUFF GOES HERE  */
-nav ul {
-  display: none;
-  margin: 0;
-  padding: 0;
-}
-
-nav ul li.active a {
-  background-color: rgba(0, 0, 0, 0.25);
-}
-
 nav ul li a {
-  display: block;
-  padding: .75rem 2vw;
-  font-size: 1.1rem;
-  color: white;
+  color: #333;
   text-decoration: none;
-  border-top: 1px solid rgba(0, 0, 0, 0.2);
+  display: block;
+  padding: 0.9rem 2vw;
+  border-top: solid 1px rgba(0, 0, 0, 0.2);
+  text-align: center;
 }
 
 nav ul li a:hover {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: #eee;
 }
 
-nav ul.open {
-  display: block;
-}
-
-#navWrapper {
-  background-color: #265b7d;
-}
-
-nav button {
-  position: relative;
-  height: 44px;
-  width: 44px;
-  background: none;
-  border: none;
-}
-
-nav button .line {
-  position: absolute;
-  height: 2px;
-  width: 60%;
-  left: 20%;
-  background-color: white;
-  -webkit-transition: all .3s ease;
-  transition: all .3s ease;
-}
-
-nav button .top {
-  top: 29%;
-}
-
-nav button .middle {
-  top: 48%;
-}
-
-nav button .bottom {
-  top: 67%;
-}
-
-#hamburgerBtn.open .top {
-  -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
-  top: 48%;
-}
-
-#hamburgerBtn.open .middle, #hamburgerBtn.open .bottom {
-  -webkit-transform: rotate(-45deg);
-          transform: rotate(-45deg);
-  top: 48%;
+nav ul li.active a {
+  background-color: #f5dfc9;
 }
 
 /* MAIN  */
 main p {
-  padding: .5rem 2vw;
+  padding: 0.5rem 2vw;
   color: #333;
   line-height: 125%;
 }
 
 main h1 {
-  padding: 1rem 2vw .5rem 2vw;
+  padding: 1rem 2vw 0.5rem 2vw;
   font-size: 1.5rem;
-  color: #156496;
+  color: #265b7d;
   font-weight: 300;
 }
 
-main .parent {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 25% 50% 25%;
-      grid-template-columns: 25% 50% 25%;
-  -ms-grid-rows: auto;
-      grid-template-rows: auto;
+main .hero {
+  width: 100%;
 }
 
-main .parent p:nth-child(1) {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
-  grid-column: 1 / span 2;
-}
-
-.parent {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 25% 50% 25%;
-      grid-template-columns: 25% 50% 25%;
-  -ms-grid-rows: auto;
-      grid-template-rows: auto;
-}
-
-.parent p:nth-child(1) {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
-  grid-column: 1 / span 2;
+main .hero img {
+  width: 100%;
+  height: auto;
 }
 
 /* FOOTER  */
@@ -266,7 +186,7 @@ main .parent p:nth-child(1) {
 }
 
 footer {
-  font-size: .85rem;
+  font-size: 0.85rem;
   padding: 1rem 0;
   color: #bbb;
   text-align: center;
@@ -278,44 +198,33 @@ footer a {
 
 @media only screen and (min-width: 35rem) {
   /* NAVIGATION STUFF GOES HERE  */
-  nav button {
-    display: none;
-  }
-  #primaryNav {
+  nav ul {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-  }
-  nav ul {
-    margin-left: 2%;
-    border-left: 1px solid rgba(255, 255, 255, 0.1);
-  }
-  nav ul li {
-    border-right: 1px solid rgba(255, 255, 255, 0.1);
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
   nav ul li a {
-    border: non;
-    font-size: 1rem;
-    padding: .9rem 1.2rem;
-    color: white;
-    text-decoration: none;
-    -webkit-transition: background 0.3s linear;
-    transition: background 0.3s linear;
-  }
-  nav ul li a:hover {
-    background: #204d69;
+    border: none;
   }
 }
 
 @media only screen and (min-width: 64rem) {
-  header, nav {
+  header, nav, main {
     max-width: 1240px;
     margin: auto;
   }
-  main {
-    max-width: 80rem;
-    margin: auto;
-  }
   /* NAVIGATION STUFF GOES HERE  */
+  nav ul li a {
+    padding: .7rem 2rem;
+    font-size: .9rem;
+  }
+  nav ul {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
