--- a/03-Fruit-Stand/scss/_small.scss
+++ b/03-Fruit-Stand/scss/_small.scss
@@ -16,7 +16,7 @@ body {
   font-family: $fontFamily;
   font-size: 16px;
 }
-div#headerWrapper {background-color: $primaryColor;}
+
 header {
   padding: 1rem $gutter;
   h1 {
@@ -38,22 +38,7 @@ header {
   }
 } //end of header
 
-.header img {
-  float: left;
-  width: 100px;
-  height: 25px;
-  background: #555;
-}
 
-.header h1 {
-  position: relative;
-  top: 18px;
-  left: 10px;
-}
-
-
-
-div#navWrapper {background-color: rgb(231, 127, 7);}
 nav {
   
   ul {
@@ -69,7 +54,7 @@ nav {
   a {
     display: block;
     padding: .8rem 0; /*44px min*/
-    color: #eee;
+    color: rgb(27, 21, 21);
     text-align: right;
     text-decoration: none;
     margin-left: .8rem;
@@ -105,12 +90,13 @@ div.parent{
   flex-wrap: wrap;
 }
 div.parent figure{
-  flex-basis: 46%;
-  margin:0;
+  flex-basis: 96%;
+  margin:1rem 2%;
 }
 div.parent figure img{
-  width:100%;
+  width:46%;
   height:auto;
+  
 }//end gallery
 
 div#footerWrapper { background-color: $primaryColor;}
@@ -120,9 +106,3 @@ footer {
   padding: 1rem $gutter;
 }
 
-/*----- Clearfix: Force an Element not to collapse -----*/
-.clearfix:after {
-  content: "";
-  display: table;
-  clear: both;
-}
