--- a/03-Fruit-Stand/scss/_small.scss
+++ b/03-Fruit-Stand/scss/_small.scss
@@ -58,9 +58,10 @@ nav {
     text-align: right;
     text-decoration: none;
     margin-left: .8rem;
+    background-color: black;
   } //end of a
   a:hover {
-    background-color: #444;
+    background-color: rgb(243, 169, 8);
     text-decoration: underline;
   }
 } //end nav
