--- a/03-Fruit-Stand/scss/_medium.scss
+++ b/03-Fruit-Stand/scss/_medium.scss
@@ -1,5 +1,6 @@
 
-    nav li {width: 25%; float: right;}
+    nav li {width: 25%; 
+      float: right;}
     nav ul {
         display: flex;
         justify-content: space-between;
