--- a/03-Fruit-Stand/scss/_variables.scss
+++ b/03-Fruit-Stand/scss/_variables.scss
@@ -1,5 +1,7 @@
 $primaryColor : #ec920a;
 $secondaryColor : rgb(64, 155, 64);
+$textNav: white; 
+$menuColor: rgb(167, 157, 157);
 
 $fontFamily : 'Quicksand', sans-serif;
 
@@ -7,4 +9,5 @@ $regularWeight : 300;
 $heavyWeight: 700;
 
 $gutter: 2%;
+
 
