--- a/03-Fruit-Stand/scss/_small.scss
+++ b/03-Fruit-Stand/scss/_small.scss
@@ -19,10 +19,9 @@ body {
 
 header {
   padding: 1rem $gutter;
-  h1, figure.logo,  {
+  h1, figure.logo {
     display: inline-block;
     vertical-align: middle;
-  
   }
   h1 {
     margin: 0;
