--- a/08 News/css/styles.css
+++ b/08 News/css/styles.css
@@ -1,224 +1,1 @@
-/* 
-html5doctor.com Reset Stylesheet
-v1.6.1
-Last Updated: 2010-09-17
-Author: Richard Clark - http://richclarkdesign.com 
-Twitter: @rich_clark
-*/
-html, body, div, span, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-abbr, address, cite, code,
-del, dfn, em, img, ins, kbd, q, samp,
-small, strong, sub, sup, var,
-b, i,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-  font-size: 100%;
-  vertical-align: baseline;
-  background: transparent; }
-
-body {
-  line-height: 1; }
-
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block; }
-
-nav ul {
-  list-style: none; }
-
-blockquote, q {
-  quotes: none; }
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: '';
-  content: none; }
-
-a {
-  margin: 0;
-  padding: 0;
-  font-size: 100%;
-  vertical-align: baseline;
-  background: transparent; }
-
-/* change colours to suit your needs */
-ins {
-  background-color: #ff9;
-  color: #000;
-  text-decoration: none; }
-
-/* change colours to suit your needs */
-mark {
-  background-color: #ff9;
-  color: #000;
-  font-style: italic;
-  font-weight: bold; }
-
-del {
-  text-decoration: line-through; }
-
-abbr[title], dfn[title] {
-  border-bottom: 1px dotted;
-  cursor: help; }
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0; }
-
-/* change border colour to suit your needs */
-hr {
-  display: block;
-  height: 1px;
-  border: 0;
-  border-top: 1px solid #cccccc;
-  margin: 1em 0;
-  padding: 0; }
-
-input, select {
-  vertical-align: middle; }
-
-/* Prevent adjustments of font size after orientation changes in IE on Windows Phone and in iOS.  */
-html {
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%; }
-
-/*  apply a natural box layout model to all elements  */
-* {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
-
-/* BODY  */
-body {
-  font-family: "Spline Sans", sans-serif;
-  font-size: 16px;
-  font-weight: 300;
-  min-width: 320px; }
-
-/* HEADER  */
-header {
-  display: grid;
-  grid-template-columns: 51px auto;
-  align-items: center;
-  padding: .5rem 2vw; }
-  header h1 {
-    font-size: 1.6rem;
-    font-weight: 300;
-    padding-left: .5rem;
-    color: #cc7a26; }
-
-/* NAVIGATION STUFF GOES HERE  */
-nav ul {
-  display: none;
-  margin: 0;
-  padding: 0; }
-nav ul li.active a {
-  background-color: rgba(0, 0, 0, 0.25); }
-nav ul li a {
-  display: block;
-  padding: .75rem 2vw;
-  font-size: 1.1rem;
-  color: white;
-  text-decoration: none;
-  border-top: 1px solid rgba(0, 0, 0, 0.2); }
-nav ul li a:hover {
-  background-color: rgba(0, 0, 0, 0.5); }
-nav ul.open {
-  display: block; }
-
-#navWrapper {
-  background-color: #265b7d; }
-
-nav button {
-  position: relative;
-  height: 44px;
-  width: 44px;
-  background: none;
-  border: none; }
-  nav button .line {
-    position: absolute;
-    height: 2px;
-    width: 60%;
-    left: 20%;
-    background-color: white;
-    transition: all .3s ease; }
-  nav button .top {
-    top: 29%; }
-  nav button .middle {
-    top: 48%; }
-  nav button .bottom {
-    top: 67%; }
-
-#hamburgerBtn.open .top {
-  transform: roate(45deg);
-  top: 48%; }
-#hamburgerBtn.open .middle, #hamburgerBtn.open .bottom {
-  transform: rotate(-45deg);
-  top: 48%; }
-
-/* MAIN  */
-main p {
-  padding: .5rem 2vw;
-  color: #333;
-  line-height: 125%; }
-main h1 {
-  padding: 1rem 2vw .5rem 2vw;
-  font-size: 1.5rem;
-  color: #265b7d;
-  font-weight: 300; }
-main .hero {
-  width: 100%; }
-main .hero img {
-  width: 100%;
-  height: auto; }
-
-/* FOOTER  */
-#footerWrapper {
-  background-color: #1b1b1b; }
-
-footer {
-  font-size: .85rem;
-  padding: 1rem 0;
-  color: #bbb;
-  text-align: center; }
-  footer a {
-    color: #eee; }
-
-@media only screen and (min-width: 35rem) {
-  /* NAVIGATION STUFF GOES HERE  */
-  nav button {
-    display: none; }
-
-  #primaryNav {
-    display: flex; }
-
-  nav ul {
-    margin-left: 2%;
-    border-left: 1px solid rgba(255, 255, 255, 0.1); }
-  nav ul li {
-    border-right: 1px solid rgba(255, 255, 255, 0.1); }
-  nav ul li a {
-    border: non;
-    font-size: 1rem;
-    padding: .9rem 1.2rem;
-    color: white;
-    text-decoration: none;
-    -webkit-transition: background 0.3s linear;
-    transition: background 0.3s linear; }
-  nav ul li a:hover {
-    background: #204d69; } }
-@media only screen and (min-width: 64rem) {
-  header, nav, main {
-    max-width: 1240px;
-    margin: auto; }
-
-  /* NAVIGATION STUFF GOES HERE  */ }
+html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent}body{line-height:1}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}nav ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}a{margin:0;padding:0;font-size:100%;vertical-align:baseline;background:transparent}ins{background-color:#ff9;color:#000;text-decoration:none}mark{background-color:#ff9;color:#000;font-style:italic;font-weight:bold}del{text-decoration:line-through}abbr[title],dfn[title]{border-bottom:1px dotted;cursor:help}table{border-collapse:collapse;border-spacing:0}hr{display:block;height:1px;border:0;border-top:1px solid #cccccc;margin:1em 0;padding:0}input,select{vertical-align:middle}html{-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}*{-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box}body{font-family:"Spline Sans",sans-serif;font-size:16px;font-weight:300;min-width:320px}header{display:grid;grid-template-columns:51px auto;align-items:center;padding:.5rem 2vw}header h1{font-size:1.6rem;font-weight:300;padding-left:1rem;color:#2660cc;justify-content:center}nav ul{display:none;margin:0;padding:0}nav ul li.active a{background-color:rgba(0,0,0,0.25)}nav ul li a{display:block;padding:.75rem 2vw;font-size:1.1rem;color:white;text-decoration:none;border-top:1px solid rgba(0,0,0,0.2)}nav ul li a:hover{background-color:rgba(0,0,0,0.5)}nav ul.open{display:block}#navWrapper{background-color:#265b7d}nav button{position:relative;height:44px;width:44px;background:none;border:none}nav button .line{position:absolute;height:2px;width:60%;left:20%;background-color:white;transition:all .3s ease}nav button .top{top:29%}nav button .middle{top:48%}nav button .bottom{top:67%}#hamburgerBtn.open .top{transform:rotate(45deg);top:48%}#hamburgerBtn.open .middle,#hamburgerBtn.open .bottom{transform:rotate(-45deg);top:48%}main p{padding:.5rem 2vw;color:#333;line-height:125%}main h1{padding:1rem 2vw .5rem 2vw;font-size:1.5rem;color:#156496;font-weight:300}main figcaption{text-align:center;font-size:0.8rem}main figure.mypic figcaption{text-align:center;font-size:0.75rem}div.parent{display:grid;grid-template-columns:25% 50% 25%;grid-template-rows:auto}div.parent p:nth-child(1){grid-column:1 / span 2}div.parent div.parent figure{flex-basis:46%;margin:1rem 2%}div.parent div.parent figure img{width:100%;height:auto}#footerWrapper{background-color:#1b1b1b}footer{font-size:.85rem;padding:1rem 0;color:#bbb;text-align:center}footer a{color:#eee}@media only screen and (min-width: 35rem){nav button{display:none}#primaryNav{display:flex}nav ul{margin-left:2%;border-left:1px solid rgba(255,255,255,0.1)}nav ul li{border-right:1px solid rgba(255,255,255,0.1)}nav ul li a{border:non;font-size:1rem;padding:.9rem 1.2rem;color:#fff;text-decoration:none;-webkit-transition:background 0.3s linear;transition:background 0.3s linear}nav ul li a:hover{background:#204d69}}@media only screen and (min-width: 64rem){header,nav{max-width:1240px;margin:auto}main{max-width:80rem;margin:auto}}
