--- a/08 News/scss/_medium.scss
+++ b/08 News/scss/_medium.scss
@@ -21,3 +21,9 @@ nav {
     }
     ul li a:hover {background: darken($menuColor,5%);}
 }
+
+div.parent {
+    grid-template-columns: 1fr 1fr 1fr;
+span{font-size: 1rem;}
+.one{grid-column: 1 / span 3;}
+}
