--- a/08 News/scss/_large.scss
+++ b/08 News/scss/_large.scss
@@ -15,3 +15,15 @@ div.parent {
         grid-row: 1 / span 2;
     }
 }
+div.footer {
+    display: grid; 
+    margin: 0 2vw;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    h1, p {
+        color: rgb(250, 244, 244);
+        text-align: left;
+        font-size: 1rem;
+        padding: .5rem; 
+    }
+}
