--- a/08 News/scss/_medium.scss
+++ b/08 News/scss/_medium.scss
@@ -2,6 +2,9 @@
 nav button {display: none;}
 #primaryNav {display:flex;}
 nav {
+    display: flex;
+    justify-items: left;
+
     ul {
         margin-left: 2%;
         border-left: 1px solid rgba(255, 255, 255, .1);
@@ -26,4 +29,17 @@ div.parent {
     grid-template-columns: 1fr 1fr 1fr;
 span{font-size: 1rem;}
 .one{grid-column: 1 / span 3;}
+}
+
+div.footer {
+    display: grid; 
+    margin: 0 2vw;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    h1, p {
+        color: rgb(250, 244, 244);
+        text-align: left;
+        font-size: 1rem;
+        padding: .5rem; 
+    }
 }
