--- a/04 News/scss/_small.scss
+++ b/04 News/scss/_small.scss
@@ -9,6 +9,7 @@ html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
 body {
     font-size: 16px;
     font-family: Verdana, sans-serif;
+    min-width: 320px;
 }
 
 
@@ -28,42 +29,33 @@ background-color:rgba(34, 33, 33, 0.301);}
 header h2 {margin: 0; font-weight: normal;
     background-color:rgba(34, 33, 33, 0.301);}
 
-/*----------- NAVIGATION --------------*/
-nav {
-      ul {
-    display: none;
-    
-    padding: 0;
-    margin: 0;
-}
-    ul li {
-    float: left;
-    width: 25%;
-}
-    ul li a {
-    display: block;
-    background-color: #444;
-    color: #eee;
-    border-left: 1px solid #777;
-    padding: .5rem 0;
-    text-decoration: none;
-    font-size: .9rem;
-    text-align: center;
-}
-    ul li:first-child a {border-left: none;}
 
+nav {
+    ul {
+        display:none;
+        text-decoration: none;
+        margin: 0;
+        padding: 0;
+    }
+    ul li.active a {background-color: red;}
+    ul li a {
+        display: block;
+        padding: .75rem 2vw;
+        font-size: 1.1rem;
+        color:white;
+        text-decoration: none;
+        border-top: 1px solid rgba(0,0,0,.2);
+    }
     ul li a:hover {
-    background-color: #eee;
-    color: #333;
+        background-color: red;
+    }
+    ul.open{display:block;
+    text-decoration: none;}
 }
-    ul li.active a {
-    background-color: #000;
-    color: #fff;
-}
-}
+
 #navWrapper {background-color: $menuColor;}
 
- nav button {
+nav button {
     position: relative;
     height: 44px;
     width: 44px;
@@ -82,6 +74,7 @@ nav {
     .bottom{top: 67%;}
 }//end button
 
+
 #hamburgerBtn.open {
     .top {
         transform: rotate(45deg);
@@ -89,7 +82,8 @@ nav {
     }
     .middle, .bottom {
         transform: rotate(-45deg);
-        top:48%;}
+        top:48%;
+    }
 }
 
 /*----------- MAIN --------------*/
