--- a/05 Restaurant/scss/styles.scss
+++ b/05 Restaurant/scss/styles.scss
@@ -4,10 +4,10 @@
 
 @import "small";
 
-@media only screen and (min-width: 35rem) {
+@media only screen and (min-width: 560px) {
     @import "medium";
 } /* end of media query */
 
-@media only screen and (min-width: 60rem) {
+@media only screen and (min-width: 1028px) {
     @import "large";
 } /* end of media query */
