--- a/07_lawFirm/css/styles.css
+++ b/07_lawFirm/css/styles.css
@@ -1,417 +1,263 @@
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
-/* Document
-   ========================================================================== */
-/**
- * 1. Correct the line height in all browsers.
- * 2. Prevent adjustments of font size after orientation changes in iOS.
- */
 html {
   line-height: 1.15;
-  /* 1 */
   -webkit-text-size-adjust: 100%;
-  /* 2 */ }
-
-/* Sections
-   ========================================================================== */
-/**
- * Remove the margin in all browsers.
- */
+}
 body {
-  margin: 0; }
-
-/**
- * Render the `main` element consistently in IE.
- */
+  margin: 0;
+}
 main {
-  display: block; }
-
-/**
- * Correct the font size and margin on `h1` elements within `section` and
- * `article` contexts in Chrome, Firefox, and Safari.
- */
+  display: block;
+}
 h1 {
   font-size: 2em;
-  margin: 0.67em 0; }
-
-/* Grouping content
-   ========================================================================== */
-/**
- * 1. Add the correct box sizing in Firefox.
- * 2. Show the overflow in Edge and IE.
- */
+  margin: 0.67em 0;
+}
 hr {
   box-sizing: content-box;
-  /* 1 */
   height: 0;
-  /* 1 */
   overflow: visible;
-  /* 2 */ }
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
+}
 pre {
   font-family: monospace, monospace;
-  /* 1 */
   font-size: 1em;
-  /* 2 */ }
-
-/* Text-level semantics
-   ========================================================================== */
-/**
- * Remove the gray background on active links in IE 10.
- */
+}
 a {
-  background-color: transparent; }
-
-/**
- * 1. Remove the bottom border in Chrome 57-
- * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
- */
+  background-color: transparent;
+}
 abbr[title] {
   border-bottom: none;
-  /* 1 */
   text-decoration: underline;
-  /* 2 */
   text-decoration: underline dotted;
-  /* 2 */ }
-
-/**
- * Add the correct font weight in Chrome, Edge, and Safari.
- */
+}
 b,
 strong {
-  font-weight: bolder; }
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
+  font-weight: bolder;
+}
 code,
 kbd,
 samp {
   font-family: monospace, monospace;
-  /* 1 */
   font-size: 1em;
-  /* 2 */ }
-
-/**
- * Add the correct font size in all browsers.
- */
+}
 small {
-  font-size: 80%; }
-
-/**
- * Prevent `sub` and `sup` elements from affecting the line height in
- * all browsers.
- */
+  font-size: 80%;
+}
 sub,
 sup {
   font-size: 75%;
   line-height: 0;
   position: relative;
-  vertical-align: baseline; }
-
+  vertical-align: baseline;
+}
 sub {
-  bottom: -0.25em; }
-
+  bottom: -0.25em;
+}
 sup {
-  top: -0.5em; }
-
-/* Embedded content
-   ========================================================================== */
-/**
- * Remove the border on images inside links in IE 10.
- */
+  top: -0.5em;
+}
 img {
-  border-style: none; }
-
-/* Forms
-   ========================================================================== */
-/**
- * 1. Change the font styles in all browsers.
- * 2. Remove the margin in Firefox and Safari.
- */
+  border-style: none;
+}
 button,
 input,
 optgroup,
 select,
 textarea {
   font-family: inherit;
-  /* 1 */
   font-size: 100%;
-  /* 1 */
   line-height: 1.15;
-  /* 1 */
   margin: 0;
-  /* 2 */ }
-
-/**
- * Show the overflow in IE.
- * 1. Show the overflow in Edge.
- */
+}
 button,
 input {
-  /* 1 */
-  overflow: visible; }
-
-/**
- * Remove the inheritance of text transform in Edge, Firefox, and IE.
- * 1. Remove the inheritance of text transform in Firefox.
- */
+  overflow: visible;
+}
 button,
 select {
-  /* 1 */
-  text-transform: none; }
-
-/**
- * Correct the inability to style clickable types in iOS and Safari.
- */
+  text-transform: none;
+}
 button,
 [type="button"],
 [type="reset"],
 [type="submit"] {
-  -webkit-appearance: button; }
-
-/**
- * Remove the inner border and padding in Firefox.
- */
+  -webkit-appearance: button;
+}
 button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
 [type="submit"]::-moz-focus-inner {
   border-style: none;
-  padding: 0; }
-
-/**
- * Restore the focus styles unset by the previous rule.
- */
+  padding: 0;
+}
 button:-moz-focusring,
 [type="button"]:-moz-focusring,
 [type="reset"]:-moz-focusring,
 [type="submit"]:-moz-focusring {
-  outline: 1px dotted ButtonText; }
-
-/**
- * Correct the padding in Firefox.
- */
+  outline: 1px dotted ButtonText;
+}
 fieldset {
-  padding: 0.35em 0.75em 0.625em; }
-
-/**
- * 1. Correct the text wrapping in Edge and IE.
- * 2. Correct the color inheritance from `fieldset` elements in IE.
- * 3. Remove the padding so developers are not caught out when they zero out
- *    `fieldset` elements in all browsers.
- */
+  padding: 0.35em 0.75em 0.625em;
+}
 legend {
   box-sizing: border-box;
-  /* 1 */
   color: inherit;
-  /* 2 */
   display: table;
-  /* 1 */
   max-width: 100%;
-  /* 1 */
   padding: 0;
-  /* 3 */
   white-space: normal;
-  /* 1 */ }
-
-/**
- * Add the correct vertical alignment in Chrome, Firefox, and Opera.
- */
+}
 progress {
-  vertical-align: baseline; }
-
-/**
- * Remove the default vertical scrollbar in IE 10+.
- */
+  vertical-align: baseline;
+}
 textarea {
-  overflow: auto; }
-
-/**
- * 1. Add the correct box sizing in IE 10.
- * 2. Remove the padding in IE 10.
- */
+  overflow: auto;
+}
 [type="checkbox"],
 [type="radio"] {
   box-sizing: border-box;
-  /* 1 */
   padding: 0;
-  /* 2 */ }
-
-/**
- * Correct the cursor style of increment and decrement buttons in Chrome.
- */
+}
 [type="number"]::-webkit-inner-spin-button,
 [type="number"]::-webkit-outer-spin-button {
-  height: auto; }
-
-/**
- * 1. Correct the odd appearance in Chrome and Safari.
- * 2. Correct the outline style in Safari.
- */
+  height: auto;
+}
 [type="search"] {
   -webkit-appearance: textfield;
-  /* 1 */
   outline-offset: -2px;
-  /* 2 */ }
-
-/**
- * Remove the inner padding in Chrome and Safari on macOS.
- */
+}
 [type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none; }
-
-/**
- * 1. Correct the inability to style clickable types in iOS and Safari.
- * 2. Change font properties to `inherit` in Safari.
- */
+  -webkit-appearance: none;
+}
 ::-webkit-file-upload-button {
   -webkit-appearance: button;
-  /* 1 */
   font: inherit;
-  /* 2 */ }
-
-/* Interactive
-   ========================================================================== */
-/*
- * Add the correct display in Edge, IE 10+, and Firefox.
- */
+}
 details {
-  display: block; }
-
-/*
- * Add the correct display in all browsers.
- */
+  display: block;
+}
 summary {
-  display: list-item; }
-
-/* Misc
-   ========================================================================== */
-/**
- * Add the correct display in IE 10+.
- */
+  display: list-item;
+}
 template {
-  display: none; }
-
-/**
- * Add the correct display in IE 10.
- */
+  display: none;
+}
 [hidden] {
-  display: none; }
-
-/* Prevent adjustments of font size after orientation changes in IE on Windows Phone and in iOS.  */
+  display: none;
+}
 html {
   -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%; }
-
-/*----------- apply a natural box layout model to all elements --------------*/
+  -ms-text-size-adjust: 100%;
+}
 * {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
-
-/*----------- BODY --------------*/
+  box-sizing: border-box;
+}
 body {
   font-size: 16px;
-  font-family: Verdana, sans-serif; }
-
-/*----------- HEADER --------------*/
+  font-family: Verdana, sans-serif;
+}
 header {
-  padding: .5rem 2%;
-  background-color: #ddd; }
-
+  padding: 0.5rem 2%;
+  background-color: #ddd;
+}
 header h1 {
-  margin: 0; }
-
+  margin: 0;
+}
 header h2 {
   margin: 0;
-  font-weight: normal; }
-
-/*----------- NAVIGATION --------------*/
+  font-weight: normal;
+}
 nav {
-  background-color: #666; }
-
+  background-color: #666;
+}
 nav ul {
   list-style-type: none;
   padding: 0;
-  margin: 0; }
-
+  margin: 0;
+}
 nav ul li {
   float: left;
-  width: 25%; }
-
+  width: 25%;
+}
 nav ul li a {
   display: block;
   background-color: #444;
   color: #eee;
   border-left: 1px solid #777;
-  padding: .5rem 0;
+  padding: 0.5rem 0;
   text-decoration: none;
-  font-size: .9rem;
-  text-align: center; }
-
+  font-size: 0.9rem;
+  text-align: center;
+}
 nav ul li:first-child a {
-  border-left: none; }
-
+  border-left: none;
+}
 nav ul li a:hover {
   background-color: #eee;
-  color: #333; }
-
+  color: #333;
+}
 nav ul li.active a {
   background-color: #000;
-  color: #fff; }
-
-/*----------- MAIN --------------*/
+  color: #fff;
+}
 main {
   padding: 0 2%;
-  min-height: 10rem; }
-
-/*----------- FOOTER --------------*/
+  min-height: 10rem;
+}
+div.social {
+  background-color: black;
+  display: flex;
+  padding: 1rem 0;
+}
+div.social a {
+  flex-basis: 25%;
+  text-align: center;
+  color: white;
+  font-size: 3rem;
+  text-decoration: none;
+}
+div.social a:hover {
+  color: orange;
+}
+div.flex {
+  display: flex;
+  flex-wrap: wrap;
+}
 footer {
   background-color: #ddd;
-  padding: .5rem 2%;
-  text-align: center; }
-
-/*----- Clearfix: Force an Element not to collapse -----*/
+  padding: 0.5rem 2%;
+  text-align: center;
+}
 .clearfix:after {
   content: "";
   display: table;
-  clear: both; }
-
+  clear: both;
+}
 @media only screen and (min-width: 35rem) {
-  /*----------- BODY --------------*/
-  /*----------- HEADER --------------*/
-  /*----------- NAVIGATION --------------*/
   nav ul {
-    margin-left: 2%; }
-
+    margin-left: 2%;
+  }
   nav ul li {
-    width: auto; }
-
+    width: auto;
+  }
   nav ul li:first-child a {
-    border-left: 1px solid #777; }
-
+    border-left: 1px solid #777;
+  }
   nav ul li:last-child a {
-    border-right: 1px solid #777; }
-
+    border-right: 1px solid #777;
+  }
   nav ul li a {
-    padding: .5rem 1rem; }
-
-  /*----------- MAIN --------------*/
-  /*----------- FOOTER --------------*/ }
-/* end of media query */
+    padding: 0.5rem 1rem;
+  }
+}
 @media only screen and (min-width: 64rem) {
-  header, nav, main, footer {
+  header,
+  nav,
+  main,
+  footer {
     max-width: 64rem;
-    margin: auto; }
-
-  /*----------- BODY --------------*/
-  /*----------- HEADER --------------*/
-  /*----------- NAVIGATION --------------*/
-  /*----------- MAIN --------------*/
-  /*----------- FOOTER --------------*/ }
-/* end of media query */
+    margin: auto;
+  }
+}
