--- a/07_lawFirm/scss/_medium.scss
+++ b/07_lawFirm/scss/_medium.scss
@@ -20,6 +20,11 @@
 /*----------- MAIN --------------*/
 
 
+/*----------- COLUMN --------------*/
+@for $i from 1 through 12 {
+    $w:($i/12) * 100%;
+    .medium-#{$i} {flex-basis: $w;}
+}//end loop
 
 /*----------- FOOTER --------------*/
     
