--- a/00_navExample/scss/_variables.scss
+++ b/00_navExample/scss/_variables.scss
@@ -1,8 +1,9 @@
-$primaryColor: rgb(7, 28, 122);
-$secondaryColor: #d40000;
+$primaryColor: #cc7a26; 
+$secondaryColor: #265b7d;
+
 $menuColor: #265b7d;
 
 $defaultFont:'Spline Sans', sans-serif;
 $lightWeight: 300;
 $normalWeight: 500;
-$gutter: 2vw;
+
