--- a/05 Restaurant/scss/_large.scss
+++ b/05 Restaurant/scss/_large.scss
@@ -20,6 +20,11 @@
         margin:0;
         padding-right: 0;
     }
+
+    figure.mypics {
+        
+        margin-bottom: 5rem;
+    }
     
     main figure { width: 31%;}
     
