--- a/07_lawFirm/scss/_large.scss
+++ b/07_lawFirm/scss/_large.scss
@@ -20,6 +20,15 @@ nav ul li a {
     }//end anchor
 
 /*----------- MAIN --------------*/
+main {
+/*----------- COLUMN --------------*/
+@for $i from 1 through 12 {
+  $w:($i/12) * 100%;
+  .larg-#{$i} {flex-basis: $w;}
+}//end loop
+
+
+
 div.parent {
     display: grid; 
     grid-template-rows: auto;
@@ -47,12 +56,6 @@ div.blogger {
     grid-template-rows: auto;
     grid-template-columns: 1fr 1fr 1fr 1fr;
 }
-/*----------- COLUMN --------------*/
-@for $i from 1 through 12 {
-        $w:($i/12) * 100%;
-        .larg-#{$i} {flex-basis: $w;}
-    }//end loop
-
-
+}
 /*----------- FOOTER --------------*/
     
